[gd_scene load_steps=14 format=3 uid="uid://deroub1tuh5dl"]

[ext_resource type="Script" path="res://Scripts/enemigo2.gd" id="1_sb2qn"]
[ext_resource type="Texture2D" uid="uid://wru0loqykdyv" path="res://Assets/icecream.png" id="2_gkix7"]
[ext_resource type="PackedScene" uid="uid://c1jcpr01nhef5" path="res://Adds/MovementScenes/movimientoenem.tscn" id="3_2oilg"]
[ext_resource type="Script" path="res://Adds/Scenes/HitBoxEnem.gd" id="4_n4rn5"]
[ext_resource type="AudioStream" uid="uid://bag2exfu3orde" path="res://Sounds/death effect.mp3" id="5_wee3f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ndxs1"]
radius = 5.0
height = 12.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eyj88"]
radius = 18.0
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1xfaf"]
radius = 7.99942
height = 27.998

[sub_resource type="Animation" id="Animation_2a7gj"]
resource_name = "Death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31, 32]
}

[sub_resource type="Animation" id="Animation_xjbj3"]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_bp65n"]
resource_name = "Move"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_o7ftm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [21]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dvbwv"]
_data = {
"Death": SubResource("Animation_2a7gj"),
"Idle": SubResource("Animation_xjbj3"),
"Move": SubResource("Animation_bp65n"),
"RESET": SubResource("Animation_o7ftm")
}

[node name="enemigo2" type="CharacterBody2D"]
script = ExtResource("1_sb2qn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_ndxs1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_gkix7")
hframes = 7
vframes = 5
frame = 21

[node name="MovimientoEnem" parent="." instance=ExtResource("3_2oilg")]

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
modulate = Color(0.321569, 0.756863, 0.447059, 1)
shape = SubResource("CapsuleShape2D_eyj88")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
script = ExtResource("4_n4rn5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 1)
rotation = 1.5828
shape = SubResource("CapsuleShape2D_1xfaf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dvbwv")
}

[node name="Effect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_wee3f")
bus = &"SFX"

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
